Fix height and overflow for category legend

--- a/collective/directory/static/collective_directory.css
+++ b/collective/directory/static/collective_directory.css
@@ -1,3 +1,8 @@
 .leaflet-control-layers-list {
+
+}
+
+.leaflet-control-layers-overlays {
     overflow: auto;
+    height: 100%;
 }
